starter-code/css/main.css
/*
Colors to use:
dark blue: #06365f
light blue: #1c5380
*/

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
}

img {
  width: 100%;
}

header {
  overflow: hidden;
}

.page {
  margin: 15% auto;
  width: 80%;
  height: 80%;
}

.phone {
  float: left;
  width: 40%;
  margin-right: 10px;
}
.content {
  float: right;
  width: 55%;
  margin: 10px;
}

.logo {
  width: 70%;
  float: left;
}

.login {
  width: 20%;
  margin: auto;
  float: right;
  color: white;
  padding: 5px;
}

img.login {
  display: inline-block;
  width: 35px;
  height: auto;
  float: left;
}
span.login {
  display: inline-block;
  line-height: 1.2em
  font-weight: bold;
  float: left;

}


main {

    padding: 10px 40px;
}

h1 {
  color: #06365f;
  font-size: 1.5em;
}

.download {
  width: 40%;
  max-width: 250px;
  float: left;
  margin-right: 20px;
}

footer {
  clear: both;
  margin: auto;
  text-align: center;
}

ul {
  list-style-type: none;
  display: inline-block;
  text-transform: uppercase;
  padding: 20px 0;
}

li {
  display: inline-block;
  padding: 0 8px;
}

a, a:visited {
  color: #1c5380;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

.copyright {
  color: lightgrey;
}

